[gd_scene load_steps=9 format=3 uid="uid://x1m5njptkfoq"]

[ext_resource type="Script" path="res://Scenes/Map/map.gd" id="1_4mhw4"]
[ext_resource type="Texture2D" uid="uid://c03mmga1bcib5" path="res://icon.svg" id="1_pj0co"]
[ext_resource type="Texture2D" uid="uid://cvqvp6vaxcqno" path="res://Assets/Images/Map/CityBackground.jpg" id="2_dr1yb"]
[ext_resource type="Texture2D" uid="uid://b7s7tiov5nd0" path="res://Assets/Images/Map/Store/store_open.png" id="3_mu0dw"]
[ext_resource type="Texture2D" uid="uid://colrg1jjdp8at" path="res://Assets/Images/Map/Store/store_close.png" id="4_2uuya"]
[ext_resource type="PackedScene" uid="uid://cljfqf3mvbk8a" path="res://Scenes/Hotbar/hotbar.tscn" id="4_s1lop"]

[sub_resource type="Gradient" id="Gradient_slbhv"]
offsets = PackedFloat32Array(0, 0.408257, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.0366972, 0.0366972, 0.0366972, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_01phe"]
gradient = SubResource("Gradient_slbhv")

[node name="Map" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4mhw4")

[node name="City" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="City"]
layout_mode = 1
offset_right = 1280.0
offset_bottom = 720.0
scale = Vector2(1.1, 1.1)
texture = ExtResource("2_dr1yb")

[node name="MarginContainer" type="MarginContainer" parent="City"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Store" type="TextureButton" parent="City/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource("3_mu0dw")
texture_disabled = ExtResource("4_2uuya")

[node name="MountainRange" type="TextureButton" parent="City/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_pj0co")

[node name="PointLight2D" type="PointLight2D" parent="City/MarginContainer"]
visible = false
position = Vector2(190, 540)
rotation = 1.5708
scale = Vector2(3.158, 4)
texture = SubResource("GradientTexture2D_01phe")

[node name="MountainRange" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="MountainRange"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
texture = ExtResource("2_dr1yb")

[node name="MarginContainer" type="MarginContainer" parent="MountainRange"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CavePainting" type="TextureButton" parent="MountainRange/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_pj0co")

[node name="Camp" type="TextureButton" parent="MountainRange/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("1_pj0co")

[node name="City" type="TextureButton" parent="MountainRange/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource("1_pj0co")

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Instances" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Hotbar" parent="." instance=ExtResource("4_s1lop")]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="pressed" from="City/MarginContainer/Store" to="." method="_on_store_pressed"]
[connection signal="pressed" from="City/MarginContainer/MountainRange" to="." method="_on_mountain_range_pressed"]
[connection signal="pressed" from="MountainRange/MarginContainer/CavePainting" to="." method="_on_cave_painting_pressed"]
[connection signal="pressed" from="MountainRange/MarginContainer/City" to="." method="_on_city_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
